<resources>
    <string name="app_name">TeleFender</string>
    <string name="call_input_hint">Call…</string>
    <string name="dialog_fire_missiles">Fire Dialog</string>
    <string name="fire">FIRE</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="item_detail_spam">Spam</string>
    <string name="item_detail_default">Default</string>
    <string name="item_detail_safe">Safe</string>
    <string name="item_detail_block">Block this Caller</string>
    <string name="item_detail_unblock">Unblock this Caller</string>

    <string name="recents_title">Recents</string>
    <string name="duration_format">%1$d seconds</string>
    <string name="contacts_title">Contacts</string>
    <string name="add_contact_title">Add Contact</string>
    <string name="keypad_title">Keypad</string>
    <string name="dialer_title">Dialer</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="permission_title">Setup</string>
    <string name="verification_title">Setup</string>
    <string name="call_history_title">Call History</string>
    <string name="initial_title">Welcome</string>
    <string name="keypad">Keypad</string>
    <string name="more_app_bar">More</string>

    <string name="permission_big_text">Last step!</string>
    <string name="permission_small_text">In order for TeleFender to function properly, we just need you to allow a few permissions.</string>
    <string name="permission_dialer_small_text">Setting TeleFender as the default dialer app will allow the app to make and receive calls just like the default phone app. Essentially, we\'re replacing the default phone app. Consequently, we will also be able to access your contacts and call logs. Don\'t worry though, you can always switch back to the default phone app by entering the default phone app or deleting TeleFender.</string>
    <string name="permission_disturb_small_text">Allowing TeleFender to have the Do Not Disturb permission makes it possible for the app to actually silence any unwanted calls (if you so choose).\n\nWhen you press the \"Allow Do Not Disturb\" button, you will be redirected to the Settings app. There, you should scroll down until you see "TeleFender", where you can then toggle on / off the Do Not Disturb permission.</string>
    <string name="permission_log_small_text">In order for our algorithm to function correctly, we collect some information from your call logs / contacts to be analyzed on our servers. Although, we want to emphasize that we do NOT upload any revealing information such as the name, location, etc., and we do NOT share this data with any third party. This data is used purely to detect / prevent spam calls.</string>
    <string name="permission_continue_text">After you allow all three permissions, go ahead and press Continue!</string>

    <string name="verification_text">We just sent a verification code to your number.</string>
    <string name="number_fill_text">We\'ll need your number to get started.</string>

    <string name="privacy_dialog_text">To use TeleFender, you need to accept our privacy policy.\n\nIf you have any additional concerns about our privacy policy, please contact us for more information.</string>

    <string name="disturb_dialog_text">In order for TeleFender to silence any unwanted calls we will need the Do Not Disturb permission.\n\nWhen you press the \"Allow Do Not Disturb\" button, you will be redirected to the Settings app. There, you should scroll down until you see "TeleFender", where you can then toggle on / off the Do Not Disturb permission.\n\nOnce you\'ve granted the permission, you will be able to select the \"Silence\" mode.</string>

    <string name="channel_name">Incoming and active phone notification channel</string>
    <string name="channel_description">High-priority notification to show incoming and active calls</string>
    <string name="default_notification_channel_id">firebase channel</string>
    <string name="add_active">Add</string>
    <string name="swap_active">Swap</string>
    <string name="merge_active">Merge</string>
    <string name="speaker_active">Speaker</string>
    <string name="mute_active">Mute</string>
    <string name="keypad_active">Keypad</string>
</resources>
